--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.4",
-    "astro": "^5.1.1",
+    "astro": "^5.1.3",
     "tailwindcss": "^3.4.17"
   },
-  "packageManager": "pnpm@9.15.1+sha256.9e534e70afef06374f6126b44bda5760947135ce16a30aef1010e965fb7e3e3e"
+  "packageManager": "pnpm@10.0.0+sha256.43abf6e720fb7bc53c591b0862605c7d323d0a9d2dd33bcac07b062e13cf4948",
+  "pnpm": {
+    "onlyBuiltDependencies": ["esbuild"]
+  }
 }
