--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "my-portfolio",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/tailwind": "^5.1.4",
-    "astro": "^5.1.3",
-    "tailwindcss": "^3.4.17"
-  },
-  "packageManager": "pnpm@10.0.0+sha256.43abf6e720fb7bc53c591b0862605c7d323d0a9d2dd33bcac07b062e13cf4948",
-  "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"]
-  }
+    "name": "my-portfolio",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/tailwind": "^5.1.5",
+        "astro": "^5.1.8",
+        "tailwindcss": "^3.4.17",
+        "sharp": "^0.33.5"
+    },
+    "packageManager": "pnpm@10.0.0+sha256.43abf6e720fb7bc53c591b0862605c7d323d0a9d2dd33bcac07b062e13cf4948",
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "esbuild"
+        ]
+    }
 }
